Large text alignment fix

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -240,14 +240,14 @@ b, strong{
       // }
 		}
 		&-center{
-			text-align: left;
+			text-align: center;
 
       // .column, .columns{
       //   text-align: center;
       // }
 		}
 		&-right{
-			text-align: left;
+			text-align: right;
 
       // .column, .columns{
       //   text-align: right;
